--- a/templates/template.html
+++ b/templates/template.html
@@ -4,16 +4,49 @@
   <meta charset="UTF-8">
   <title>webcsv: Simple CSV Web Viewer</title>
   <style>
-    body { margin:0; font:16px sans-serif; }
-    h2 { margin:0;padding:8px 16px;background:#ddd;border-bottom:1px solid #ccc; }
-    p { margin:0;padding:8px 16px; }
+    body { margin: 0; font: 16px sans-serif; }
+    h2 { margin: 0; padding: 8px 16px; background: #ddd; border-bottom: 1px solid #ccc; }
+    a { color: #000; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    a.dotfiles { color:#777; }
+    .address { padding: 8px 16px; border-bottom: 1px solid #ddd; margin: 0 0 8px; background: #eee; }
+    .address a { text-decoration: underline; }
+    .address span { color:#777; }
+    .address a:last-child { font-weight: bold; }
+    .error { padding: 0 8px; font-size:15px; color: #333; }
+    .dir-list { padding: 0 16px; font-family: monospace; font-size: 14px; }
+    .dir-item { margin: 0; padding: 4px 0; }
+    .file-show { padding:0 8px; }
+    .csv-table { border-collapse: collapse; }
+    .csv-table th, .csv-table td { border: 1px solid #ccc; padding: 8px; }
+    .csv-table th { background: linear-gradient(#f5f5f5, #eee); }
+    .csv-table td { }
   </style>
 </head>
 <body>
+
   <h2>webcsv</h2>
-  <p>
-    current value of <b>f</b> is: <u>{{ getf }}</u>
-  </p>
+
+  <div class="address">
+    Path: {% for a in view.address %}<span>{{ a[2] }}</span><a href="?f={{ a[1] }}">{{ a[0] }}</a>{% endfor %}
+  </div>
+
+  {% if view.newfs %}
+  <div class="dir-list">
+    {% for f in view.newfs %}
+      <div class="dir-item"><a href="?f={{ f[1] }}" class="{% if f[0].startswith('.') %}dotfiles{% endif %}">{{ f[0] }}</a></div>
+    {% endfor %}
+  </div>
+  {% endif %}
+
+  <div class="file-show">
+    {% if view.csvshow %}
+      {{ view.csvshow | safe }}
+    {% endif %}
+    {% if view.noncsv %}
+      <div class="error">This file is not a CSV file.</div>
+    {% endif %}
+  </div>
+
 </body>
 </html>
-
