--- a/templates/template.html
+++ b/templates/template.html
@@ -18,8 +18,10 @@
     .address a:last-child { font-weight: bold; }
     .error { color: #555; font-family: monospace; padding: 4px 0; }
     .dir-list { padding: 8px 16px; font-family: monospace; font-size: 14px; }
+    .dir-list .error { padding: 4px 0; }
     .dir-item { padding: 4px 0; }
     .file-show { padding:16px; }
+    .file-show .error { margin-top: -4px; }
     .csv-table { border-collapse: collapse; font-size:13px; }
     .csv-table th, .csv-table td { border: 1px solid #ccc; padding: 8px; font-weight: normal; }
     .csv-table th { background: linear-gradient(#f9f9f9 0% 50%, #f2f2f2 50% 100%); }
