updates: refactoring & app_path option

--- a/templates/template.html
+++ b/templates/template.html
@@ -33,7 +33,7 @@
 
   {% if view.show_header %}
   <h2>
-    <a href="/?f=/">webcsv</a>
+    <a href="{{ view.app_path }}?f=/">webcsv</a>
     <a class="hide" href="?f={{ view.getf_html_sp }}{{ view.getview_query }}&amp;hide=true">&#10548;</a>
   </h2>
 
