update: multiple filters live

--- a/templates/template.html
+++ b/templates/template.html
@@ -35,7 +35,7 @@
   {% if view.show_header %}
   <h2>
     <a href="{{ view.app_path }}?f=/">webcsv</a>
-    <a class="hide" href="?f={{ view.getf_html_sp }}{{ view.getview_query }}&amp;hide=true">&#10548;</a>
+    <a class="hide" href="?f={{ view.getf_html_sp }}{{ view.getview_query }}{{ view.getfilter_query }}&amp;hide=true">&#10548;</a>
   </h2>
 
   <div class="address">
