--- a/templates/template.html
+++ b/templates/template.html
@@ -39,10 +39,12 @@
 <body>
 
   {% if view.show_header %}
-  <h2 class="webcsv-h2">
-    <a href="{{ view.app_path }}?f=/">webcsv</a>
-    <a class="hide" href="?f={{ view.getf_html_sp }}{{ view.getview_query }}{{ view.getfilter_query }}&amp;hide=true">&#10548;</a>
-  </h2>
+  <div class="webcsv">
+    <h2 class="webcsv-h2">
+      <a href="{{ view.app_path }}?f=/">webcsv</a>
+      <a class="hide" href="?f={{ view.getf_html_sp }}{{ view.getview_query }}{{ view.getfilter_query }}&amp;hide=true">&#10548;</a>
+    </h2>
+  </div>
 
   <div class="webcsv address">
     Path: {% for a in view.address %} <span>{{ a.separator }}</span> <a href="?f={{ a.path }}">{{ a.name }}</a>{% endfor %}
