--- a/templates/template.html
+++ b/templates/template.html
@@ -31,7 +31,7 @@
     .csv-table td { }
   {% if view.markdown_css %}
     /* Markdown CSS from: https://sindresorhus.com/github-markdown-css/github-markdown.css */
-    .show-markdown { min-width: 200px; max-width: 830px; margin: 20px auto 0; padding:8px 32px 16px; border:1px solid #ddd; }
+    .show-markdown { min-width: 200px; max-width: 830px; margin: 20px auto 40px; padding:8px 32px 16px; border:1px solid #ddd; }
     {{ view.markdown_css }}
   {% endif %}
   </style>
