--- a/templates/template.html
+++ b/templates/template.html
@@ -19,6 +19,7 @@
     .address a:last-child { font-weight: bold; }
     .error { color: #555; font-family: monospace; padding: 4px 0; }
     .noncsv-plain { margin: 0; padding: 4px 0; }
+    .hide-on-hide { {% if not view.show_header %} display:none; {% endif %} }
     .dir-list { padding: 8px 16px; font-family: monospace; font-size: 14px; }
     .dir-list .error { padding: 4px 0; }
     .dir-item { padding: 4px 0; }
@@ -47,7 +48,7 @@
   <div class="webcsv">
     <h2 class="webcsv-h2">
       <a href="{{ view.app_path }}?f=/">webcsv</a>
-      <a class="hide" href="?f={{ view.getf_html_sp }}{{ view.getview_query }}{{ view.getfilter_query }}&amp;hide=true">&#10548;</a>
+      <a class="hide" href="?f={{ view.getf_html_sp }}{{ view.getview_query }}{{ view.getsort_query }}{{ view.getfilter_query }}&amp;hide=true">&#10548;</a>
     </h2>
   </div>
 
