update: mobile web app meta tags

--- a/templates/template.html
+++ b/templates/template.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>webcsv: {{ view.getf_html if view.getf_html else 'Simple CSV Web Viewer' }}</title>
+  <meta name="apple-mobile-web-app-title" content="webcsv: {{ view.getf_html if view.getf_html else 'Simple CSV Web Viewer' }}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes" /> 
   <style>
     body { margin: 0; padding: 0; }
     .webcsv { font: 14px sans-serif; }
